--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <div>
-    <img src="img/mobile_XD.jpg" alt="xd">
+    <img src="img/mobile_XD.jpg" style="max-width: ;100%" alt="xd">
   </div>
 
 </body>
